1999-11-18  Roland McGrath  <roland@baalperazim.frob.com>

	* default_pager.c (default_pager): Instead of suspending this thread,
	just become the default_pager_default_thread thread ourselves.

	* wiring.c (wire_all_memory): Touch pages before wiring.

1999-11-16  Roland McGrath  <roland@baalperazim.frob.com>

	* default_pager.c (default_pager_initialize): Use MACH_PORT_VALID to
	check old DMM port, rather than just checking for MACH_PORT_NULL.

	* strfcns.c (index): Function removed.

	* ffs_file_io.c (ffs_open_file): Use memmove instead of ovbcopy.
	* ext2_file_io.c (ext2_open_file): Likewise.
	* strfcns.c (ovbcopy): Function removed.

1999-11-08  Roland McGrath  <roland@baalperazim.frob.com>

	* bootstrap.c (main): Further spruce up prompting and error reporting
	for root device and boot script.

1999-10-28  Roland McGrath  <roland@baalperazim.frob.com>

	* load.c, bootstrap.c: Back out some debugging printfs accidentally
	included in the last commit.
	* bootstrap.c (main): Increase size of NEW_ROOT buffer.
	This change was included in the last commit, but not logged then.

	* file_io.h: Include <errno.h>.
	(FS_* macros): Define these to equivalent errno codes.
	* def_pager_setup.c (add_paging_file): Put strerror of result code in
	error messages.
	* bootstrap.c (parse_script): Likewise.
	* load.c (boot_script_exec_cmd): Include NAMEBUF in error messages,
	and use strerror to format result code.
	* panic.c (panic): Use program_invocation_name in message.

1999-10-08  Thomas Bushnell, BSG  <tb@mit.edu>

	* bootstrap.c: (DEFAULT_ROOT): Remove macro.
	(main): If no root device was specified, then prompt as if the
	user had specified -a.  Don't use strcpy to move NEW_ROOT into
	ROOT_NAME; that's unsafe.

1999-10-06  Roland McGrath  <roland@baalperazim.frob.com>

	* bootstrap.c (DEFAULT_ROOT): Change to "hd0s1".

1999-08-20  Roland McGrath  <roland@baalperazim.frob.com>

	* bootstrap.c (parse_script): Add one to the buffer size so we can